--- a/src/null.scss
+++ b/src/null.scss
@@ -102,7 +102,8 @@ button {
     vertical-align: baseline;
     box-sizing: border-box;
     color: white;
-    font-family: 'Gilroy';
+    font-family: 'ARIAL regular';
+    // font-family: 'Gilroy';
 }
 
 .dnone {
@@ -138,4 +139,10 @@ html {
     max-width: 1900px;
     margin: 0 auto;
     padding: 0px 50px;
+}
+
+
+.App {
+    width: 100%;
+    overflow: hidden;
 }
