--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
     // padding-top: 10px !important;
     height: 60px;
 
-    &__leftcontainer {
+    &_left {
         width: 50%;
         display: flex;
         justify-content: start;
@@ -52,7 +52,7 @@
         }
     }
 
-    &__rightcontainer {
+    &_right {
         width: 50%;
         display: flex;
         justify-content: end;
