--- a/src/components/SliderSmall/SliderSmallElement.scss
+++ b/src/components/SliderSmall/SliderSmallElement.scss
@@ -38,122 +38,151 @@
             }
         }
     }
-    &_btn{
+
+    &_btn {
         margin-bottom: 20px;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    &_decor{
+
+    &_decor {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        &_1{
+
+        &_1 {
             left: 100px;
-            img{
+
+            img {
                 width: 33px;
                 rotate: 20deg;
             }
         }
-        &_2{
+
+        &_2 {
             left: 85px;
             top: 15px;
-            img{
+
+            img {
                 width: 15px;
             }
-            &_fire{
+
+            &_fire {
                 top: 25px;
-                img{
+
+                img {
                     width: 20px;
                 }
             }
         }
-        &_3{
+
+        &_3 {
             left: 100px;
             top: 35px;
-            img{
+
+            img {
                 rotate: 50deg;
             }
-            &_fire{
+
+            &_fire {
                 left: 110px;
                 top: 40px;
-                img{
+
+                img {
                     rotate: 30deg;
                 }
             }
         }
-        &_4{
+
+        &_4 {
             right: 110px;
             top: 40px;
-            img{
+
+            img {
                 width: 20px;
             }
         }
-        &_5{
+
+        &_5 {
             left: 110px;
             top: 220px;
-            img{
+
+            img {
                 rotate: 50deg;
                 width: 20px;
             }
         }
-        &_6{
+
+        &_6 {
             right: 110px;
             top: 270px;
-            &_fire{
-                img{
+
+            &_fire {
+                img {
                     rotate: 10deg;
                 }
             }
         }
-        &_7{
+
+        &_7 {
             right: 90px;
             top: 250px;
-            img{
+
+            img {
                 rotate: 50deg;
                 width: 20px;
             }
-            &_fire{
-                img{
+
+            &_fire {
+                img {
                     rotate: 15deg;
                     width: 25px;
                 }
             }
         }
-        &_8{
+
+        &_8 {
             right: 115px;
             top: 230px;
-            img{
+
+            img {
                 rotate: 15deg;
                 width: 35px;
             }
         }
     }
 
-    &_line{
+    &_line {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        &_decor{
+
+        &_decor {
             width: 100% !important;
             top: 170px;
-            &_back{
+
+            &_back {
                 z-index: -1;
             }
-            &_text{
+
+            &_text {
                 bottom: 10px;
-                &_title{
+
+                &_title {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     text-align: center;
                     flex-wrap: wrap;
-                    span{
+
+                    span {
                         font-family: 'ARIAL regular';
                         font-size: 12px;
+                        white-space: nowrap;
                     }
                 }
             }
