--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -82,6 +82,11 @@
             gap: 5px;
             font-family: 'ARIAL regular';
             font-size: 16px;
+            cursor: pointer;
+            &_arrow{
+                width: 6px;
+                rotate: -90deg;
+            }
         }
 
         &_signin {
@@ -122,6 +127,47 @@
                 img {
                     filter: invert(1);
                 }
+            }
+        }
+
+        &_language{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            &_dropdown{
+                position: absolute;
+                top: 100%;
+                background-color: #000;
+                box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+                list-style-type: none;
+                padding: 10px 0;
+                z-index: 999;
+                opacity: 0;
+                transform: translateY(-10px);
+                visibility: hidden;
+                transition: opacity 300ms ease, transform 300ms ease, visibility 300ms;
+                li {
+                    padding: 10px 20px;
+                    cursor: pointer;
+                    font-family: 'ARIAL regular';
+                    font-size: 16px;
+                    transition: background-color 200ms;
+                    &:hover{
+                        background-color: #6e6e6e69;
+                    }
+                }
+                &_show{
+                    opacity: 1;
+                    transform: translateY(0);
+                    visibility: visible;
+                }
+            }
+            &_arrow{
+                margin-left: 10px;
+                transform: rotate(0deg);
+                transition: transform 0.3s ease;
             }
         }
     }
