--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,10 @@
     // padding-top: 10px !important;
     height: 60px;
 
+    @media(max-width: 750px) {
+        display: none;
+    }
+
     &_left {
         width: 50%;
         display: flex;
@@ -83,7 +87,8 @@
             font-family: 'ARIAL regular';
             font-size: 16px;
             cursor: pointer;
-            &_arrow{
+
+            &_arrow {
                 width: 6px;
                 rotate: -90deg;
             }
@@ -130,41 +135,45 @@
             }
         }
 
-        &_language{
+        &_language {
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            &_dropdown{
+
+            &_dropdown {
                 position: absolute;
                 top: 100%;
                 background-color: #000;
                 box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
                 list-style-type: none;
-                padding: 10px 0;
                 z-index: 999;
                 opacity: 0;
                 transform: translateY(-10px);
                 visibility: hidden;
                 transition: opacity 300ms ease, transform 300ms ease, visibility 300ms;
+
                 li {
                     padding: 10px 20px;
                     cursor: pointer;
                     font-family: 'ARIAL regular';
                     font-size: 16px;
                     transition: background-color 200ms;
-                    &:hover{
+
+                    &:hover {
                         background-color: #6e6e6e69;
                     }
                 }
-                &_show{
+
+                &_show {
                     opacity: 1;
                     transform: translateY(0);
                     visibility: visible;
                 }
             }
-            &_arrow{
+
+            &_arrow {
                 margin-left: 10px;
                 transform: rotate(0deg);
                 transition: transform 0.3s ease;
