--- a/src/components/SliderBig/SliderBig.scss
+++ b/src/components/SliderBig/SliderBig.scss
@@ -5,7 +5,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: hidden;
+        // overflow: hidden;
         margin: 0 auto;
     }
 
