--- a/src/components/SliderBig/SliderBigElement.scss
+++ b/src/components/SliderBig/SliderBigElement.scss
@@ -85,6 +85,10 @@
         padding-right: 160px;
         margin-top: 8px;
         text-shadow: 0px 0px 2px #000, 0px 0px 10px #000;
+
+        @media(max-width: 600px) {
+            padding-right: 0px;
+        }
     }
 
     &_buttons {
@@ -92,16 +96,25 @@
         margin-top: 24px;
 
         &_watch {
-            padding: 12px 32px;
-            background: rgba(0, 122, 255, 1);
+            padding: 10px 30px;
+            background-color: #007aff;
             border-radius: 24px;
             display: flex;
             align-items: center;
             column-gap: 8px;
             font-size: 20px;
+            border: 4px solid #007aff;
+            transition: background-color 200ms;
+
 
             img {
                 width: 16px;
+            }
+
+            &:hover {
+                background-color: #005abb;
+                cursor: pointer;
+
             }
 
         }
