--- a/src/components/SliderSmall/SliderSmall.scss
+++ b/src/components/SliderSmall/SliderSmall.scss
@@ -2,16 +2,47 @@
 
     margin-top: 120px;
 
+    &_content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    &_arrow {
+        min-width: 40px;
+        min-height: 40px;
+        border-radius: 40px;
+        background-color: #fff2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 200ms;
+
+        &:hover {
+            cursor: pointer;
+            background-color: #fff4;
+        }
+
+        &_right {
+            rotate: 180deg;
+        }
+
+        &_wrapper {
+            position: relative;
+            z-index: 2;
+        }
+    }
+
     &_slider {
         display: flex;
         justify-content: center;
         align-items: center;
-        // gap: 30px;
         height: 400px;
-        overflow: hidden;
+        width: 1200px;
 
         &_element {
-            transition: transform 200ms, opacity 200ms;
+            // transition: transform 200ms, opacity 200ms;
         }
     }
 
@@ -19,8 +50,13 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        font-size: 32px;
-        font-weight: 800;
+        position: relative;
+        z-index: 9;
+
+        &_title {
+            font-size: 32px;
+            font-weight: 800;
+        }
     }
 
 }
