--- a/src/components/Stories/StoriesElement/StoriesElement.scss
+++ b/src/components/Stories/StoriesElement/StoriesElement.scss
@@ -1,14 +1,15 @@
-.StoriesElement{
+.StoriesElement {
     // width: calc(100% / 7 - 30px);
     border-radius: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    img{
+
+    img {
         border-radius: 25px;
     }
 
-    &_border{
+    &_border {
         background: linear-gradient(45deg, #007AFF 0%, #8AECFD 53%, #E94AC5 100%);
         // padding: 4px 4px 2px 4px;
         padding: 4px;
@@ -17,10 +18,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        &_black{
+
+        &_black {
             background-color: #000;
-            // padding: 4px 4px 1px 4px;
-            padding: 4px 4px 1px 4px;
+            padding: 4px;
+            display: flex;
             border-radius: 30px;
         }
     }
