--- a/src/null.scss
+++ b/src/null.scss
@@ -142,6 +142,13 @@ html {
     padding: 0px 16px;
 }
 
+.Bigcontainer {
+    width: 100%;
+    max-width: 1900px;
+    margin: 0 auto;
+    padding: 0px 16px;
+}
+
 
 .App {
     width: 100%;
