--- a/src/components/CalendarDaysEl/CalendarDaysEl.scss
+++ b/src/components/CalendarDaysEl/CalendarDaysEl.scss
@@ -8,6 +8,7 @@
     align-items: center;
     background-color: #FFFFFF1A;
     border-radius: 10px;
+    min-width: 57px;
     &_el{
         font-family: 'ARIAL bold';
         font-size: 16px;
