--- a/src/pages/PersonalAccount/HistoryEl/HistoryEl.scss
+++ b/src/pages/PersonalAccount/HistoryEl/HistoryEl.scss
@@ -28,6 +28,38 @@
                 background-color: #007AFF;
             }
         }
+        &_mob{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &_title{
+                font-size: 16px;
+                font-family: 'ARIAL bold';
+                font-weight: 700;
+            }
+            &_btn{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 10px;
+                border-radius: 50px;
+                background-color: #1E1E1E;
+                transition: background-color 300ms;
+                img{
+                    transition: filter 300ms;
+                }
+                &:hover{
+                    background-color: #FFF;
+                    img{
+                        filter: invert(1);
+                    }
+                }
+            }
+        }
+    }
+    &_headermob{
+        flex-wrap: wrap;
     }
     &_list{
         width: 100%;
