--- a/src/pages/WatchStories/WatchStories.scss
+++ b/src/pages/WatchStories/WatchStories.scss
@@ -7,6 +7,9 @@
         justify-content: center;
         flex-wrap: wrap;
     }
+    @media(max-width: 750px){
+        padding-bottom: 80px !important;
+    }
     &_left{
         width: calc(25% - 20px);
         display: flex;
@@ -24,10 +27,21 @@
         justify-content: center;
         align-items: center;
         gap: 16px;
+        @media(max-width: 570px){
+            padding: 0px 10px;
+            align-items: start;
+            flex-wrap: wrap;
+            align-content: start;
+            width: 100%;
+        }
         &_stories{
             display: flex;
             justify-content: center;
             align-items: start; 
+            @media(max-width: 500px){
+                flex-wrap: wrap;
+                align-content: start !important;
+            }
             &_video{
                 min-width: 450px;
                 min-height: 800px;
@@ -35,10 +49,24 @@
                 align-content: space-between;
                 img{
                     max-height: 800px;
+                    @media(max-width: 500px){
+                        max-width: 90vw;
+                        min-width: 90vw;
+                    }
+                }
+                @media(max-width: 500px){
+                    max-width: 90vw;
+                    min-width: 90vw;
+                    align-items: start !important;
+                    align-content: start;
                 }
             }
             &_container{
                 align-items: start !important;
+                @media(max-width: 500px){
+                    max-width: 90vw;
+                    min-width: 90vw;
+                }
                 &_wrapper{
                     min-width: 450px;
                     min-height: 800px;
@@ -48,6 +76,11 @@
                     align-content: space-between;
                     padding: 16px 8px;
                     padding-bottom: 0px !important;
+                    @media(max-width: 500px){
+                        max-width: 90vw;
+                        min-width: 90vw;
+                        min-height: 0px;
+                    }
                 }
             }
             &_top{
@@ -61,12 +94,18 @@
                     justify-content: start;
                     align-items: center;
                     gap: 8px;
+                    @media(max-width: 570px){
+                        display: none;
+                    }
                 }
                 &_right{
                     width: 50%;
                     display: flex;
                     justify-content: end;
                     align-items: center;
+                    @media(max-width: 570px){
+                        display: none;
+                    }
                 }
             }
             &_center{
@@ -76,6 +115,9 @@
                 align-items: end;
                 flex-direction: column;
                 gap: 10px;
+                @media(max-width: 570px){
+                    display: none;
+                }
             }
             &_bottom{
                 width: 100%;
@@ -89,6 +131,11 @@
                     border-radius: 20px;
                     height: 100%;
                 }
+            }
+        }
+        &_btn{
+            @media(max-width: 570px){
+                display: none;
             }
         }
     }
