--- a/src/pages/Fandom/Fandom.scss
+++ b/src/pages/Fandom/Fandom.scss
@@ -26,6 +26,9 @@
             justify-content: start;
             align-items: center;
             gap: 22px;
+            @media(max-width: 800px){
+                width: 100%;
+            }
             &_item{
                 display: flex;
                 justify-content: start;
@@ -50,6 +53,9 @@
 
         &_balance{
             width: calc(20% - 16px);
+            @media(max-width: 800px){
+                display: none;
+            }
         }
 
         &_middle{
@@ -59,6 +65,10 @@
             justify-content: center;
             flex-wrap: wrap;
             align-content: start;
+            gap: 24px;
+            @media(max-width: 800px){
+                width: 100%;
+            }
         }
 
         &_left{
@@ -71,6 +81,9 @@
             background: linear-gradient(200deg, #2b1c2777 0%, #1E2C3B77 100%);
             backdrop-filter: blur(10px);
             border-radius: 25px;
+            @media(max-width: 800px){
+                display: none;
+            }
             &_title{
                 width: 100%;
                 font-family: 'ARIAL regular';
