--- a/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
+++ b/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
@@ -22,6 +22,9 @@
             gap: 8px;
             font-size: 12px;
             font-family: 'ARIAL regular';
+            @media(max-width: 860px){
+                width: calc(70% - 10px);
+            }
             &_round{
                 width: 4px;
                 height: 4px;
@@ -38,6 +41,9 @@
             justify-content: end;
             align-items: center;
             gap: 8px;
+            @media(max-width: 860px){
+                width: calc(30% - 10px);
+            }
         }
     }
     &_title{
@@ -49,44 +55,83 @@
         font-family: 'ARIAL regular';
         font-size: 16px;
     }
-    &_post{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &_back{
-            position: relative;
-            z-index: 0;
-            top: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+   &_post{
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 25px;
+    width: 100%;
+    &_bg{
+        width: 100% !important;
+        align-items: baseline !important;
+        &_img{
+            min-width: 100%;
+            min-height: 400px;
+            filter: blur(10px);
             border-radius: 25px;
-            img{
-                width: 100%;
-                object-fit: contain;
-                filter: blur(10px);
-                border-radius: 25px;
-                opacity: .8;
-            }
-        }
-        &_middle{
-            align-items: center !important;
-            z-index: 9999;
-            right: 50%;
-            img{
-                width: 400px;
-                filter: blur(0px);
-                opacity: 1;
-            }
         }
     }
+    &_content{
+        position: relative;
+        z-index: 3;
+        &_img{
+            width: 100%;
+            max-height: 400px;
+        }
+    }
+   }
     &_nav{
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
+        padding: 0px 16px;
+        &_likes{
+            padding: 7px 17px;
+            background-color: rgba($color: #000000, $alpha: .25);
+            border-radius: 28px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            font-family: 'ARIAL regular';
+            gap: 5px;
+            cursor: pointer;
+            transition: background-color 300ms, color 300ms;
+            img{
+                rotate: 25deg;
+                width: 15px;
+                height: 15px;
+                transition: filter 300ms;
+            }
+            &:hover{
+                background-color: #FFF;
+                color: #000;
+            }
+        }
+        &_comments_img{
+            img{
+                rotate: 0deg;
+            }
+        }
+        &_el{
+            &:hover{
+                img{
+                    filter: invert(1);
+                }
+            }
+        }
+    }
+    &_line{
+        width: 100%;
+        height: 2px;
+        background-color: rgba($color: #FFF, $alpha: .13);
+    }
+    &_comments{
+        width: 100%;
+        display: flex;
+        justify-content: start;
         flex-wrap: wrap;
     }
 }
