--- a/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
+++ b/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
@@ -75,6 +75,7 @@
     &_content{
         position: relative;
         z-index: 3;
+        display: flex;
         &_img{
             width: 100%;
             max-height: 400px;
