--- a/src/components/ContineuwathcingBtn/ContineuwathcingBtn.scss
+++ b/src/components/ContineuwathcingBtn/ContineuwathcingBtn.scss
@@ -9,4 +9,7 @@
     padding: 7px 14px;
     border-radius: 50px;
     cursor: pointer;
+    @media(max-width: 440px){
+        font-size: 8px;
+    }
 }
