--- a/src/pages/Fandom/Fandom.scss
+++ b/src/pages/Fandom/Fandom.scss
@@ -5,6 +5,12 @@
     flex-wrap: wrap;
     align-items: center;
     flex-wrap: wrap;
+    padding-bottom: 20px;
+    @media(max-width: 750px){
+        overflow-x: hidden;
+        min-height: 100vh;
+        margin-bottom: 100px !important;
+    }
     &_slider{
         width: 100%;
         display: flex;
@@ -20,13 +26,17 @@
         justify-content: center;
         align-items: center;
         gap: 16px;
+        @media(max-width: 750px){
+            min-height: 500px;
+            align-content: start;
+        }
         &_nav{
             width: 50%;
             display: flex;
             justify-content: start;
             align-items: center;
             gap: 22px;
-            @media(max-width: 800px){
+            @media(max-width: 750px){
                 width: 100%;
             }
             &_item{
@@ -53,7 +63,7 @@
 
         &_balance{
             width: calc(20% - 16px);
-            @media(max-width: 800px){
+            @media(max-width: 750px){
                 display: none;
             }
         }
@@ -66,7 +76,7 @@
             flex-wrap: wrap;
             align-content: start;
             gap: 24px;
-            @media(max-width: 800px){
+            @media(max-width: 750px){
                 width: 100%;
             }
         }
@@ -81,7 +91,7 @@
             background: linear-gradient(200deg, #2b1c2777 0%, #1E2C3B77 100%);
             backdrop-filter: blur(10px);
             border-radius: 25px;
-            @media(max-width: 800px){
+            @media(max-width: 750px){
                 display: none;
             }
             &_title{
