--- a/src/pages/Fandom/FandomDiscussionEl/FandomDiscussionEl.scss
+++ b/src/pages/Fandom/FandomDiscussionEl/FandomDiscussionEl.scss
@@ -16,11 +16,17 @@
             font-family: 'ARIAL regular';
             font-size: 12px;
             width: 100%;
+            @media(max-width: 940px){
+                font-size: 8px;
+            }
         }
         &_members{
             font-family: 'ARIAL regular';
             font-size: 12px;
             color: #C7C7C7;
+            @media(max-width: 940px){
+                font-size: 8px;
+            }
         }
     }
 }
