--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,7 @@
     padding-top: 31px !important;
     padding-bottom: 24px !important;
     gap: 24px;
+    margin-top: 50px !important;
 
     &_wrapper {
         background: linear-gradient(to bottom, #2b1c279c 70%, #1e2c3b93 100%);
