--- a/src/components/SliderSmall/SliderSmallBtn/SliderSmallBtn.scss
+++ b/src/components/SliderSmall/SliderSmallBtn/SliderSmallBtn.scss
@@ -1,11 +1,12 @@
 .SliderSmallBtn {
     background-color: green;
-    padding: 6px 13px;
+    padding: 8px 15px;
     font-family: 'ARIAL regular';
     font-size: 14px;
     border-radius: 50px;
     cursor: pointer;
     transition: scale 300ms;
+    font-weight: 400;
 
     &:hover {
         scale: 1.02;
