--- a/src/components/MobMenu/MobMenu.scss
+++ b/src/components/MobMenu/MobMenu.scss
@@ -11,7 +11,7 @@
         background-color: #000;
         gap: 10px;
         padding: 16px;
-        z-index: 99999;
+        z-index: 999999999999;
         &_navHome{
             width: calc(100% / 4 - 10px);
             display: flex;
