--- a/src/components/SliderSmall/SliderSmallElement.scss
+++ b/src/components/SliderSmall/SliderSmallElement.scss
@@ -1,26 +1,6 @@
 .SliderSmallElement {
     transition: scale 300ms;
-    &:hover{
-        scale: 1.05;
-        .SliderSmallElement_decor{
-            opacity: 0;
-        }
-        .SliderSmallElement_line{
-            opacity: 0;
-        }
-        .SliderSmallElement_btn{
-            opacity: 0;
-        }
-        .SliderSmallElement_progress{
-            opacity: 0;
-        }
-        .SliderSmallElement_img_hover{
-            opacity: 1;
-        }
-        .SliderSmallElement_img{
-            filter: drop-shadow(0 0 20px #FFF);
-        }
-    }
+
     &_img {
         width: 220px;
         height: 310px;
@@ -33,7 +13,9 @@
         overflow: hidden;
         flex-wrap: wrap;
         transition: scale 300ms, filter 300ms;
-        &_hover{    
+        filter: drop-shadow(0px 0px 20px #fff0);
+
+        &_hover {
             min-width: 220px;
             min-height: 310px;
             position: absolute;
@@ -45,17 +27,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            &_leftBouncer{
+
+            &_leftBouncer {
                 width: 25%;
                 height: 100%;
             }
-            &_center{
+
+            &_center {
                 width: 50%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                &_play{
-                    backdrop-filter: blur(10px);
+
+                position: relative;
+                z-index: 999;
+
+                &_play {
                     padding: 20px 20px 20px 25px;
                     display: flex;
                     justify-content: center;
@@ -63,9 +50,19 @@
                     border-radius: 50px;
                     border: 2px solid #FFF;
                     cursor: pointer;
+                    background-color: #000B;
+                    transition: scale 200ms, background-color 200ms;
+
+                    pointer-events: all;
+
+                    &:hover {
+                        scale: 1.1;
+                        background-color: #000;
+                    }
                 }
             }
-            &_right{
+
+            &_right {
                 width: 25%;
                 height: 270px;
                 display: flex;
@@ -73,11 +70,13 @@
                 align-items: center;
                 flex-direction: column;
                 gap: 7px;
-                &_heart{
+
+                &_heart {
                     rotate: 25deg;
                     width: 20px !important;
                 }
-                img{
+
+                img {
                     width: 18px;
                     cursor: pointer;
                 }
@@ -128,6 +127,10 @@
         justify-content: center;
         align-items: center;
         transition: opacity 300ms;
+        position: relative;
+        z-index: 6;
+        pointer-events: none;
+
         &_1 {
             left: 100px;
 
@@ -231,11 +234,22 @@
     }
 
     &_line {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 100ms;
+
+        &_top,
+        &_bot {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 1;
+            transition: opacity 300ms;
+            position: relative;
+            pointer-events: none;
+        }
+
+        &_top {
+            z-index: 5;
+        }
 
         &_decor {
             width: 100% !important;
@@ -243,6 +257,14 @@
 
             &_back {
                 z-index: -1;
+            }
+
+            &_top {
+                z-index: 2;
+            }
+
+            &_text {
+                z-index: 3;
             }
 
             &_text {
@@ -267,4 +289,42 @@
             }
         }
     }
+}
+
+.SliderSmallElement {
+    transition: scale 300ms;
+
+    &:hover {
+        scale: 1.05;
+
+        .SliderSmallElement_decor {
+            opacity: 0;
+        }
+
+        .SliderSmallElement_line_bot {
+            opacity: 0;
+        }
+
+        .SliderSmallElement_line_top {
+            opacity: 0;
+        }
+
+        .SliderSmallElement_btn {
+            opacity: 0;
+        }
+
+        .SliderSmallElement_progress {
+            opacity: 0;
+        }
+
+        .SliderSmallElement_img_hover {
+            opacity: 1;
+        }
+
+        .SliderSmallElement_img {
+            // box-shadow: 0px 0px 20px #fff;
+            filter: drop-shadow(0px 0px 20px #fff);
+        }
+    }
+
 }
