--- a/front/src/components/SignInBtn/SignInBtn.scss
+++ b/front/src/components/SignInBtn/SignInBtn.scss
@@ -15,4 +15,9 @@
         color: #000;
         background-color: #FFF;
     }
+    &_big{
+       padding: 10px 28px;
+       min-width: 70px;
+        
+    }
 }
