--- a/front/src/pages/PersonalAccount/PersonalAccount.scss
+++ b/front/src/pages/PersonalAccount/PersonalAccount.scss
@@ -49,6 +49,10 @@
                 justify-content: start;
                 align-items: center;
                 gap: 8px;
+                @media(max-width: 650px){
+                    justify-content: center;
+                    min-width: 100px;
+                }
                 &_logo{
                     padding: 6px 8px 7px 9px;
                     background-color: #EF29DC;
@@ -69,6 +73,9 @@
                         justify-content: center;
                         align-items: center;
                     }
+                    @media(max-width: 500px){
+                        font-size: 10px;
+                    }
                 }
             }
             &_tickets{
@@ -76,6 +83,10 @@
                 display: flex;
                 justify-content: start;
                 gap: 8px;
+                @media(max-width: 650px){
+                    justify-content: center;
+                    min-width: 100px;
+                }
                 &_logo{
                     display: flex;
                     justify-content: center;
@@ -115,6 +126,9 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
+                    }
+                    @media(max-width: 500px){
+                        font-size: 10px;
                     }
                 }
             }
