--- a/front/src/components/Header/Header.scss
+++ b/front/src/components/Header/Header.scss
@@ -2,15 +2,16 @@
     width: 100%;
     display: flex;
     align-items: center;
-    // padding-top: 10px !important;
     height: 60px;
+    position: relative;
+    z-index: 999;
+    justify-content: space-between;
 
     @media(max-width: 1000px) {
         display: none;
     }
 
     &_left {
-        width: 30%;
         display: flex;
         justify-content: start;
         align-items: center;
@@ -57,7 +58,6 @@
     }
 
     &_right {
-        width: 70%;
         display: flex;
         justify-content: end;
         gap: 20px;
