--- a/front/src/components/Slider/Slider.scss
+++ b/front/src/components/Slider/Slider.scss
@@ -3,4 +3,55 @@
     align-items: center;
     justify-content: center;
 
+
+    &_arrow {
+        min-width: 40px;
+        min-height: 40px;
+        border-radius: 40px;
+        background-color: #fff2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 200ms;
+
+
+        &:hover {
+            cursor: pointer;
+            background-color: #fff4;
+        }
+
+        &_right {
+            rotate: 180deg;
+
+        }
+
+        &_wrapper {
+            position: relative;
+            z-index: 2;
+
+            @media(max-width: 1200px) {
+                left: 40px;
+            }
+
+            &_right {
+                @media(max-width: 1200px) {
+                    left: -40px !important;
+                }
+            }
+
+        }
+    }
+
+    &_content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+        width: 1200px;
+        max-width: calc(100vw);
+
+        &_stories {
+            height: 220px;
+        }
+    }
 }
