--- a/front/src/pages/Genre/GenreFilters/GenreFilters.scss
+++ b/front/src/pages/Genre/GenreFilters/GenreFilters.scss
@@ -3,6 +3,8 @@
     justify-content: center;
     gap: 12px;
     width: 90%;
+    position: relative;
+    z-index: 999;
     @media(max-width: 1000px){
         flex-direction: column;
         align-items: center;
